Fix issues (java 8 bug, component, path)